# occt_geometry

./: .gitignore  1_funcspec.md  2_mcp_spec_plan.md  CMakeLists.txt  MCP_WEB_PREVIEW_USAGE.md  README.md  api_spec.md
csharp/L1GeometryAdapter/: L1GeometryAdapter.sln
csharp/L1GeometryAdapter/L1GeometryAdapter/: JobJsonDefaults.cs  JobValidator.cs  JsonConverter.cs  L1GeometryAdapter.csproj  L1GeometryKernel.cs  Path2DProfileResolver.cs  Program.cs  ValidationError.cs
csharp/L1GeometryAdapter/L1GeometryAdapter.Tests/: FilletTests.cs  L1GeometryAdapter.Tests.csproj
csharp/L1GeometryAdapter/L1GeometryAdapter/Properties/: launchSettings.json
csharp/L1GeometryAdapter/McpJobBuilder/: JobTools.cs  McpJobBuilder.csproj  McpParams.cs  McpResponses.cs  Program.cs
csharp/L1GeometryAdapter/WebL1Geometry/: JobApiRoutes.cs  JobValidator.cs  PreviewBridgeRoutes.cs  Program.cs  WebL1Geometry.csproj
csharp/L1GeometryAdapter/WebL1Geometry/Properties/: launchSettings.json
csharp/L1GeometryAdapter/WebL1Geometry/wwwroot/: camera-axis-overlay.css  camera-axis-overlay.js  index.html  mcp-preview.html  mcp-preview.js  script.js  stage-preview.js
include/: l1_geometry_kernel.h
samples/: box_drill_case.txt  box_mill_hole_case.txt  lathe_job.json  machining_job.json  machining_job2.json  main.cpp  mill_contour_arc_case.txt  mill_contour_circle1_case.txt  mill_contour_circle_case.txt  mill_contour_fillet_job.json  mill_contour_job.json  pocket_rect_case.txt  turn_id_case.txt  turn_od_arc_case.txt  turn_od_case.txt
src/: l1_geometry_kernel.cpp
tools/: plot_path2d_csv.py
